// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DecimalInput renders type decimal number 1`] = `
<DocumentFragment>
  <input
    class="criterion-input form-control"
    data-testid="decimal-number"
    step="0.01"
    type="number"
    value="1.23"
  />
</DocumentFragment>
`;

exports[`DecimalInput renders type decimal number with options 1`] = `
<DocumentFragment>
  <select
    class="form-control criterion-input form-control"
    data-testid="options-decimal"
  >
    <option
      value="1.00"
    >
      1.00
    </option>
    <option
      value="2.00"
    >
      2.00
    </option>
  </select>
</DocumentFragment>
`;

exports[`DecimalInput renders type decimal number with options disabled 1`] = `
<DocumentFragment>
  <select
    class="form-control criterion-input form-control"
    data-testid="options-decimal"
  >
    <option
      disabled=""
      value="1.00"
    >
      1.00
    </option>
    <option
      value="2.00"
    >
      2.00
    </option>
  </select>
</DocumentFragment>
`;
